:bug: fix: fix css not to go out of the screen

--- a/src/css/display.css
+++ b/src/css/display.css
@@ -8,6 +8,7 @@
 
 .align-row {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .align-column {
